--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-addons/*
 !addons/.editorconfig
 # Godot 4+ specific ignores
 .godot/
@@ -15,5 +14,5 @@ data_*/
 
 ## gd-plug
 .plugged/
-.addons/enhanced_common/
-.addons/zylann.editor_debugger/
+addons/enhanced_common/
+addons/zylann.editor_debugger/
