--- a/addons.jsonc
+++ b/addons.jsonc
@@ -13,6 +13,11 @@
       "url": "https://github.com/Zennyth/EnhancedCommon",
       "checkout": "develop",
       "subfolder": "addons/enhanced_common"
+    },
+    "enhanced_resource": {
+      "url": "https://github.com/Zennyth/EnhancedResource",
+      "checkout": "develop",
+      "subfolder": "addons/enhanced_resource"
     }
   }
 }
